--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtvirtualkeyboard (5.7.1+true1~2) UNRELEASED; urgency=medium
+
+  * Intial check-in of debian packaging files
+  * Add additional build-deps
+
+ -- Robert Hedges <rhedges@truefitness.com>  Wed, 21 Jun 2017 15:49:07 +0000
+
 qtvirtualkeyboard (5.7.1+true1~1) unstable; urgency=medium
 
   * Initial Release.
